--- a/programmers/고득점kit/Hash1.ipynb
+++ b/programmers/고득점kit/Hash1.ipynb
@@ -1,30 +1,16 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "nd-9KaSA5ZsD"
+      },
       "source": [
         "# 프로그래머스\n",
         "## 고득점 Kits\n",
         "\n",
         "### 해시 Level.1"
-      ],
-      "metadata": {
-        "id": "nd-9KaSA5ZsD"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -39,6 +25,38 @@
         "    else: answer = len(set(nums))\n",
         "    return answer"
       ]
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Another Solution"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def solution(ls):\n",
+        "    return min(len(ls)/2, len(set(ls)))"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
